# MulMedia

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
app/: .gitignore  README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader_frag_video_relief.glsl  shader_frag_video_soul.glsl
app/src/main/assets/gles2/: shader_frag_video.glsl  shader_vertex_video.glsl  shader_vertex_video_soul.glsl
app/src/main/assets/gles3/: frag_element.glsl  shader_frag_texture.glsl  shader_frag_video.glsl  shader_vertex_texture.glsl  shader_vertex_video.glsl  vertex_element.glsl
app/src/main/res/drawable/: icon_pause.xml  icon_play.xml  nav_item_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_compose.xml  (+12 more)
base/: README.md  build.gradle.kts
buildSrc/: README.md
buildSrc/src/main/kotlin/: BuildHelper.kt
camera/: README.md  build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/module/: AndroidManifest.xml
ffmpegPlayer/: README.md  build.gradle
ffmpegPlayer/src/main/cpp/: CMakeLists.txt  NPlayer.cpp
gles2/: README.md  build.gradle.kts
gles3/: README.md  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  ffmpeg_player.cpp  ffmpeg_player.h  nativelib.cpp
nativelib2/: build.gradle
nativelib2/src/main/: AndroidManifest.xml
nativelib2/src/main/cpp/: CMakeLists.txt  nativelib2.cpp
opengles-base/: build.gradle
opengles-base/src/main/: AndroidManifest.xml
opengles-base/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
opengles-base/src/main/cpp/egl/: GLESRender.cpp  GLESRender.h  RenderState.h
opengles-base/src/main/cpp/render/: IDrawer.cpp  IDrawer.h  IShader.h
opengles-base/src/main/cpp/render/drawer/: TextureDrawer.cpp  TextureDrawer.h
opengles-base/src/main/cpp/render/shader/: CameraYUVShader.cpp  CameraYUVShader.h
opengles-base/src/main/cpp/utils/: logger.h
(+277 files in other folders)
